fix: quantity added to arrival
