# src/main/java/hei/school/demo/endpoint/rest/controller/dto/ArrivalItemRequest.java
@@ -1,16 +1,14 @@
-package hei.school.demo.entity;
+package hei.school.demo.endpoint.rest.controller.dto;
 
 import java.util.UUID;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+@Data
 @AllArgsConstructor
 @NoArgsConstructor
-@Data
-public class ArrivalItem {
-  private UUID id;
-  private UUID arrivalId;
+public class ArrivalItemRequest {
   private UUID bookCopyId;
   private int quantity;
 }
