# src/main/java/hei/school/demo/endpoint/rest/controller/dto/SaleItemRequest.java
@@ -1,0 +1,5 @@
+package hei.school.demo.endpoint.rest.controller.dto;
+
+import java.util.UUID;
+
+public record SaleItemRequest(UUID bookCopyId, int quantity) {}
